# tiny-cuda-examples

./: .clang-format  .clangd  .gitignore  README.md
100-days-of-cuda/: README.md
100-days-of-cuda/day01/: setup.py  softmax.cu  softmax_binding.cpp  test_softmax.py
100-days-of-cuda/day02/: note.md  setup.py  test_warp_softmax.py  warp_softmax.cu  warp_softmax_binding.cpp
100-days-of-cuda/day03/: dtype_aware_softmax.cu  dtype_aware_softmax_binding.cpp  setup.py  test_dtype_softmax.py
100-days-of-cuda/day04/: block_softmax.cu  block_softmax_binding.cpp  note.md  setup.py  test_block_softmax.py
100-days-of-cuda/day05/: setup.py  test_vec_softmax.py  vec_softmax.cu  vec_softmax_binding.cpp
100-days-of-cuda/day06/: matmul.cu  matmul_binding.cpp  note.md  setup.py  test_matmul.py
100-days-of-cuda/day07/: matmul_binding.cpp  note.md  setup.py  test_matmul.py  tile_matmul.cu
100-days-of-cuda/day08/: profile_matmul.py
100-days-of-cuda/day09/: tile_matmul.cu
100-days-of-cuda/day10/: CMakeLists.txt  jit_gemm.py  main.cu  tile_matmul.cuh
100-days-of-cuda/day11/: jit_gemm.py  smem_matmul.cuh
100-days-of-cuda/day12/: jit_gemm.py  smem_matmul.cuh
softmax/: softmax_benchmark.py
